fixed main title text alignment

--- a/client/src/assets/css/main.css
+++ b/client/src/assets/css/main.css
@@ -10,10 +10,14 @@
 }
 
 a, /* anchor and green */
-.green {
+.sage-soft-text {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
   color: var(--vt-c-sage-soft);
+  padding: 3px;
+}
+.sage-text {
+  text-decoration: none;
+  color: var(--vt-c-sage);
   padding: 3px;
 }
 
